// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deep: context matches snapshot 1`] = `
preact-render-spy (1 nodes)
-------
<div>second first</div>

`;

exports[`deep: find matches snapshot 1`] = `
preact-render-spy (3 nodes)
-------
<span onClick={[Function onClick]}>click</span>
<span attr="text attr">text</span>
<span
  itsTrue={true}
  itsFalse={false}
>
  bools
</span>

`;

exports[`deep: output matches snapshot 1`] = `
Object {
  "__": null,
  "__b": 0,
  "__c": null,
  "__d": undefined,
  "__e": null,
  "__k": null,
  "__v": [Circular],
  "constructor": undefined,
  "key": null,
  "props": Object {
    "children": Array [
      "second ",
      "first",
    ],
  },
  "ref": null,
  "type": "div",
}
`;

exports[`deep: snapshots for text nodes 1`] = `
preact-render-spy (1 nodes)
-------
Text

`;

exports[`deep: snapshots for text nodes 2`] = `
preact-render-spy (1 nodes)
-------
<div>Text</div>

`;

exports[`deep: weird render cases toString matches snapshot 1`] = `
"preact-render-spy (1 nodes)
-------
{null}
"
`;

exports[`deep: weird render cases toString matches snapshot 2`] = `preact-render-spy (0 nodes)`;

exports[`shallow: context matches snapshot 1`] = `
preact-render-spy (1 nodes)
-------
<Second>first</Second>

`;

exports[`shallow: find matches snapshot 1`] = `
preact-render-spy (3 nodes)
-------
<span onClick={[Function onClick]}>click</span>
<span attr="text attr">text</span>
<span
  itsTrue={true}
  itsFalse={false}
>
  bools
</span>

`;

exports[`shallow: output matches snapshot 1`] = `
Object {
  "__": null,
  "__b": 0,
  "__c": null,
  "__d": undefined,
  "__e": null,
  "__k": null,
  "__v": [Circular],
  "constructor": undefined,
  "key": null,
  "props": Object {
    "children": "first",
  },
  "ref": null,
  "type": [Function],
}
`;

exports[`shallow: snapshots for text nodes 1`] = `
preact-render-spy (1 nodes)
-------
Text

`;

exports[`shallow: snapshots for text nodes 2`] = `
preact-render-spy (1 nodes)
-------
<div>
  <Text></Text>
</div>

`;

exports[`shallow: weird render cases toString matches snapshot 1`] = `
"preact-render-spy (1 nodes)
-------
<NullStateless>
  <Div></Div>
</NullStateless>
"
`;

exports[`shallow: weird render cases toString matches snapshot 2`] = `
preact-render-spy (1 nodes)
-------
<Div></Div>

`;
